@@ -28,12 +28,11 @@ public class DesktopMini2DxConfig extends LwjglApplicationConfiguration {
 	 */
 	public float targetTimestep = (1f / targetFPS);
 	/**
-	 * {@link LifecycleListener#pause()} and don't render when the window is minimized.
+	 * Pause game and don't render when the window is minimized.
 	 */
 	public boolean pauseWhenMinimized = true;
 	/**
-	 * {@link LifecycleListener#pause()} (but continue rendering) when the window
-	 * is not minimized and not the foreground window.
+	 * Pause (but continue rendering) when the game window is not minimized and not the foreground window.
 	 * To stop rendering when not the foreground window, use backgroundFPS -1.
 	 */
 	public boolean pauseWhenBackground = false;
