@@ -2,6 +2,7 @@
 - Update to LibGDX 1.9.8
 - [BREAKING] UiContainer can now select a NavigationMode instead of only enabling/disabling keyboard
 - [BREAKING] Font loading split into BitmapFont and MonospaceFont
+- [BREAKING] Game no longer pauses when changing to/from foreground/background. Game now pauses when minimised/restored. Toggle these settings via DesktopMini2DxConfig.
 - Added SpriteSheet class
 - Added GameDataSerializable interface for reading/writing binary data
 - Added method to get file handles within the player data directory
